padding change for mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="active"><a href="#">
                 <span aria-hidden="true"></span>Home
             </a>
-            <li><a href="#">
+            <li><a href="#collections">
                 <span aria-hidden="true"></span>Collection
             </a>
             <li><a href="#">
