--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
       <nav>
         <ul id="primary-navigation" data-visible="false" class="primary-navigation">
-            <li class="active"><a href="#">
+            <li class="active"><a href="#home">
                 <span aria-hidden="true"></span>Home
             </a>
-            <li><a href="#collections">
+            <li><a href="#collection">
                 <span aria-hidden="true"></span>Collection
             </a>
-            <li><a href="#">
+            <li><a href="#new">
                 <span aria-hidden="true"></span>New
             </a>
-            <li><a href="#">
+            <li><a href="#categories">
                 <span aria-hidden="true"></span>Categories
             </a>
         </ul>
@@ -35,7 +35,7 @@
       </div>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="home">
       <div class="item">
         <h1>New <br>Collection</h1>
         <p>Discover Your Signature at Leesah</p>
@@ -46,7 +46,7 @@
       </div>
     </section>
 
-    <section class="collecions" id="collecions">
+    <section class="collecions" id="collection">
       <div class="collection-text">
         <h1>Top collections for you</h1>
         <p>we take great pride in curating our top collecions to cater to the diverse taste and preferences of our esteemed customers. Each collection embodies a unique essence and showcases the latest trends. Here are some of our top collections</p>
@@ -100,7 +100,7 @@
 
     </section>
     
-    <section class="Arrivals">
+    <section class="Arrivals" id="new">
       <div class="arrival-txt">
         <h1>New Arrivals</h1>
         <p>Introducing Our Latest Arrivals Unveil The Fresh Trends and Must-Have Styles! <br> Discover a Captivating selection of new fashion arrivals at Leesah Haven</p>
@@ -170,7 +170,7 @@
       </div>
     </section>
 
-    <section class="categories">
+    <section class="categories" id="categories">
       <div class="categories-container">
         <h1>categories</h1>
         <p>These are some of the variations in clothing, so choose according to your taste</p>
